# Pantheios.Extras.Main

./: CMakeLists.txt  prepare_cmake.sh
cmake/: BuildType.cmake
examples/: CMakeLists.txt
examples/c/example.c.main.1/: example.c.main.1.c  implicit_link.cpp
examples/c/example.c.main.2/: example.c.main.2.c
examples/cpp/: CMakeLists.txt
examples/cpp/example.cpp.main.1/: example.cpp.main.1.cpp
examples/cpp/example.cpp.main.2/: example.cpp.main.2.cpp
examples/cpp/example.cpp.main.MFC/: example.cpp.main.MFC.cpp
examples/cpp/example.cpp.wmain/: example.cpp.wmain.cpp
include/pantheios/extras/: main.h  main.hpp
include/pantheios/extras/main/: invoke.h  invoke.hpp
include/pantheios/extras/main/internal/: common.h  common.hpp  stlsoft.h
test/unit/cpp/test.unit.cpp.main.1/: CMakeLists.txt  test.unit.cpp.main.1.cpp  test_throw_int_NO_CATCHALL.cpp  test_throw_int_USE_CATCHALL.cpp
